--- a/index.izu.html.html
+++ b/index.izu.html.html
@@ -10444,7 +10444,7 @@ $(document).ready(function() {
         $('#msg').text(msg);
         count = count + 1;
         $.ajax({
-            url: "https://submit-form.com/1IHZXfQb",
+            url: "https://submit-form.com/B49H8XpV",
             dataType: 'JSON',
             type: 'POST',
             data: {
